# DeepACSA

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  ACSAuto_DeepLearning.ipynb  CHANGELOG.rst  Creating_ACSA_Masks.ijm  Desktop.ini  MANIFEST.in  Model_Training-ACSAuto.ipynb  README.md  README_Pypi.md  __init__.py  deep_acsa_gui.py  dockerfile  environment.yml  pyproject.toml  requirements.txt  requirements2.txt  setup.py
DeepACSA/: ACSAuto.py  DeepACSA.iss  DeepACSA.spec  __init__.py  __main__.py  deep_acsa_gui.py
DeepACSA/gui_helpers/: __init__.py  apo_model.py  calculate_muscle_volume.py  calibrate.py  create_manual_masks.py  data_augmentation.py  echo_int.py  file_analysis.py  image_processing.py  model_training.py  predict_muscle_area.py
DeepACSA/gui_helpers/gui_files/: ui_color_theme.json
DeepACSA/gui_modules/: ACSAuto.py  __init__.py  advanced_modules.py
DeepACSA_example/: rectus_img_55.tif  rectus_img_56.tif  rectus_img_57.tif
Deep_ACSA/: ACSAuto.py  __init__.py  __main__.py  deep_acsa_gui.py
Deep_ACSA/gui_helpers/: __init__.py  apo_model.py  calculate_muscle_volume.py  calibrate.py  create_manual_masks.py  data_augmentation.py  echo_int.py  file_analysis.py  image_processing.py  model_training.py  predict_muscle_area.py
apo_image_RF/: RF_1.tif  RF_15.tif
changelog.d/: 20221228_231809_paul.ritsche_train_model_MM.rst  20250410_131909_paul.ritsche_frame_plotting_PR.rst  20260303_080805_alberto.guzzi_towards_v0_3_2.rst  20260312_150237_alberto.guzzi_towards_v0_3_2.rst
deep_acsauto/: __init__.py  apo_model.py  batch_calculator.py  calibrate.py  deep_acsa.py  deep_acsa_gui.py  echo_int.py  predict_muscle_area.py  prepare_quad_imgs.py
deep_acsauto/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
docs/image_labelling/: Creating_ACSA_Masks_v0.1.0.ijm
docs/source/: DeepACSA.gui_helpers.rst  Deep_ACSA.gui_helpers.rst  Documentation.rst  News.rst  Whats new.rst  conf.py  contribute.rst  deep_acsa_package.rst  index.rst  installation.rst  modules.rst  news.rst  requirements.txt  tests.rst  usage.rst
docs/source/_static/: github_bar.css  github_bar.js
gui_helpers/: __init__.py  apo_model.py  calculate_muscle_volume.py  calibrate.py  echo_int.py  model_training.py  predict_muscle_area.py  prepare_quad_imgs.py
models/: model-acsa-256+64-RF.h5  model-acsa-512+32-RF.h5  model-acsa-VL-256+64.h5  model-acsa-VL-512+32.h5
notebooks/: ACSAuto_DeepLearning.ipynb  Model_Training-ACSAuto.ipynb  Model_Training_DeepACSA_VGG16.ipynb  Prepare_imgs_DL.ipynb  weights-Gastro-256.csv  weights-Gastro1-256.csv  weights-RF-256.csv  weights-VL-256.csv
notebooks/.ipynb_checkpoints/: ACSAuto_DeepLearning-checkpoint.ipynb  Model_Training-ACSAuto-checkpoint.ipynb  Prepare_imgs_DL-checkpoint.ipynb
