[build-system]
requires = ["setuptools", "wheel", "hatchling"]
build-backend = "hatchling.build"


[project]
name = "DeepACSA"
version = "0.3.2"
authors = [
  { name="Paul Ritsche", email="paul.ritsche@unibas.ch" },
]
description = "Automatic analysis of transversal muscle ultrasonography images"
readme = "README_Pypi.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "customtkinter==5.2.2",
    "CTKToolTip==0.8",
    "Keras==2.10.0",
    "matplotlib==3.6.1",
    "numpy==1.23.4",
    "opencv-contrib-python==4.6.0.66",
    "openpyxl==3.0.10",
    "pandas==1.5.1",
    "Pillow==9.2.0",
    "pre-commit==2.17.0",
    "scikit-image==0.19.3",
    "scikit-learn==1.1.2",
    "sewar==0.4.5",
    "shapely==2.0.5",
    "tensorflow==2.10.0",
    "tqdm==4.64.1",
]

[project.urls]
"Homepage" = "https://github.com/PaulRitsche/DeepACSA"
"Bug Tracker" = "https://github.com/PaulRitsche/DeepACSA/issues"
